--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
 	</head>
 	<body>
 
-		<!-- Main content goes here -->
+		<table border="1">
+			<tr>
+				<th>ID</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>DOB</th>
+			</tr>
+
+			<tr>
+				<td>1</td>
+				<td>Ben</td>
+				<td>Abbott</td>
+				<td>23/08/1991</td>
+			</tr>
+
+			<tr>
+				<td>2</td>
+				<td>Andrew</td>
+				<td>McLeod</td>
+				<td>11/04/1989</td>
+			</tr>
+
+			<tr>
+				<td>3</td>
+				<td>Mel</td>
+				<td>Campbell</td>
+				<td>14/05/1990</td>
+			</tr>
+		</table>
 		
 	</body>
 </html>
