--- a/index.html
+++ b/index.html
@@ -37,6 +37,54 @@
 				<td>14/05/1990</td>
 			</tr>
 		</table>
+
+		<table border="1">
+			<caption>Orders</caption>
+			<tr>
+				<th colspan="3">Customer Contact Info</th>
+				<th></th>
+			</tr>
+
+			<tr>
+				<th>Name</th>
+				<th>Address</th>
+				<th>Phone Number</th>
+				<th>Order ID</th>
+			</tr>
+
+			<tr>
+				<td>Ben Abbott</td>
+				<td>1 House, Street Road, City</td>
+				<td>022 123 4567</td>
+				<td>#23</td>
+			</tr>
+
+			<tr>
+				<td>John Doe</td>
+				<td>11 Kent Terrace, Wellington</td>
+				<td>021 280 9404</td>
+				<td>#24</td>
+			</tr>
+
+			<tr>
+				<td>Sam Sharpe</td>
+				<td>123 Discovery Drive, Flagstaff</td>
+				<td>07 825 6789</td>
+				<td>#25</td>
+			</tr>
+		</table>
+
+
+
+
+
+
+
+
+
+
+
+
 		
 	</body>
 </html>
