--- a/index.html
+++ b/index.html
@@ -74,7 +74,49 @@
 			</tr>
 		</table>
 
+		<table border="1">
+			<caption>Competition Results</caption>
+			<tr>
+				<th></th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Country</th>
+			</tr>
 
+			<tr>
+				<th rowspan="3">Winners</th>
+				<td>Ben</td>
+				<td>Abbott</td>
+				<td>New Zealand</td>
+			</tr>
+
+			<tr>
+				<td>Mel</td>
+				<td>Campbell</td>
+				<td>Canada</td>
+			</tr>
+
+			<tr>
+				<td>Andrew</td>
+				<td>McLeod</td>
+				<td>USA</td>
+			</tr>
+
+			<tr>
+				<th rowspan="2">Losers</th>
+				<td>Unfortunate</td>
+				<td>Person 1</td>
+				<td>Australia</td>
+			</tr>
+
+			<tr>
+				<td>Slacker</td>
+				<td>Number 2</td>
+				<td>England</td>
+			</tr>
+
+
+		</table>
 
 
 
