--- a/index.html
+++ b/index.html
@@ -118,6 +118,68 @@
 
 		</table>
 
+		<table border="1">
+			<caption>Computers for sale</caption>
+			<tr>
+				<th rowspan="2">Product Name</th>
+				<th rowspan="2">Operating System</th>
+				<th colspan="2">CPU</th>
+				<th rowspan="2">RAM</th>
+				<th colspan="2">Graphics Card</th>
+				<th rowspan="2">Price</th>
+			</tr>
+
+			<tr>
+				<th>Standard</th>
+				<th>Pro</th>
+				<th>Standard</th>
+				<th>Pro</th>
+			</tr>
+
+			<tr>
+				<td>Laptop</td>
+				<td>Microsoft Windows 10</td>
+				<td>i5</td>
+				<td>i7</td>
+				<td>8GB</td>
+				<td>550m</td>
+				<td>980m</td>
+				<td>$2,000</td>
+			</tr>
+
+			<tr>
+				<td>Laptop</td>
+				<td>Microsoft Windows 10</td>
+				<td>i5</td>
+				<td>i7</td>
+				<td>8GB</td>
+				<td>550m</td>
+				<td>980m</td>
+				<td>$2,000</td>
+			</tr>
+
+			<tr>
+				<td>Laptop</td>
+				<td>Microsoft Windows 10</td>
+				<td>i5</td>
+				<td>i7</td>
+				<td>8GB</td>
+				<td>550m</td>
+				<td>980m</td>
+				<td>$2,000</td>
+			</tr>
+
+			<tr>
+				<td>Laptop</td>
+				<td>Microsoft Windows 10</td>
+				<td>i5</td>
+				<td>i7</td>
+				<td>8GB</td>
+				<td>550m</td>
+				<td>980m</td>
+				<td>$2,000</td>
+			</tr>
+		</table>
 
 
 
