Style our computer form

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 		</table>
 
-		<table border="1">
+		<table id="computers">
 			<caption>Computers for sale</caption>
 			<tr>
 				<th rowspan="2">Product Name</th>
@@ -130,8 +130,8 @@
 			</tr>
 
 			<tr>
-				<th>Standard</th>
-				<th>Pro</th>
+				<th id="cpu-standard">Standard</th>
+				<th id="cpu-pro">Pro</th>
 				<th>Standard</th>
 				<th>Pro</th>
 			</tr>
